--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
             Trends</span> -->
           </a></div>
       <div id="nav">
-        <a href="#" rel="nofollow">Mortgage</a>
-        <a href="#" rel="nofollow">Debt Relief</a>
-        <a href="#" rel="nofollow">Insurance</a>
-        <a href="#" rel="nofollow">Credit Repair</a>
+        <a href="https://go.thisuseful.com/click" rel="nofollow">Mortgage</a>
+        <a href="https://go.thisuseful.com/click" rel="nofollow">Debt Relief</a>
+        <a href="https://go.thisuseful.com/click" rel="nofollow">Insurance</a>
+        <a href="https://go.thisuseful.com/click" rel="nofollow">Credit Repair</a>
       </div>
       <div id="dropdown">
         <button onclick="if (!window.__cfRLUnblockHandlers) return false; showMenu()" id="menu"
@@ -47,10 +47,10 @@
           <span class="times">✕</span>
         </button>
         <div id="dropdown-menu">
-          <a href="#" rel="nofollow">Mortgage</a>
-          <a href="#" rel="nofollow">Debt Relief</a>
-          <a href="#" rel="nofollow">Insurance</a>
-          <a href="#" rel="nofollow">Credit Repair</a>
+          <a href="https://go.thisuseful.com/click" rel="nofollow">Mortgage</a>
+          <a href="https://go.thisuseful.com/click" rel="nofollow">Debt Relief</a>
+          <a href="https://go.thisuseful.com/click" rel="nofollow">Insurance</a>
+          <a href="https://go.thisuseful.com/click" rel="nofollow">Credit Repair</a>
         </div>
       </div>
     </div>
@@ -78,17 +78,17 @@
           </p>
           <div class="row spacing-sm">
             <div class="sm-6 column mb-20">
-              <a href="#" rel="nofollow"><img src="/images/before.webp"
+              <a href="https://go.thisuseful.com/click" rel="nofollow"><img src="/images/before.webp"
                   class="img-responsive center-block"></a>
             </div>
             <div class="sm-6 column mb-20">
-              <a href="#" rel="nofollow"><img src="/images/after.webp"
+              <a href="https://go.thisuseful.com/click" rel="nofollow"><img src="/images/after.webp"
                   class="img-responsive center-block"></a>
             </div>
           </div>
           <p>
             <strong>So, what is the "One Simple Truth?"</strong> NEVER buy insurance without <a class="strong"
-              href="#" rel="nofollow">comparing rates and discounts from an
+              href="https://go.thisuseful.com/click" rel="nofollow">comparing rates and discounts from an
               unbiased source</a> first.
           </p>
           <blockquote>
@@ -98,7 +98,7 @@
           </blockquote>
           <h2 class="strong">Here's How You Do It:</h2>
           <p>
-            <strong>Step 1:</strong> <a class="strong" href="#"
+            <strong>Step 1:</strong> <a class="strong" href="https://go.thisuseful.com/click"
               rel="nofollow">Click your age below to view your discounts.</a>
           </p>
           <p>
@@ -107,38 +107,38 @@
           </p>
           <div class="row spacing-sm">
             <div class="xs-12 sm-6 md-4 column">
-              <p><a class="btn btn-primary btn-lg btn-block" href="#"
+              <p><a class="btn btn-primary btn-lg btn-block" href="https://go.thisuseful.com/click"
                   rel="nofollow"><strong>16 - 25 »</strong></a></p>
             </div>
             <div class="xs-12 sm-6 md-4 column">
-              <p><a class="btn btn-primary btn-lg btn-block" href="#"
+              <p><a class="btn btn-primary btn-lg btn-block" href="https://go.thisuseful.com/click"
                   rel="nofollow"><strong>26 - 35 »</strong></a></p>
             </div>
             <div class="xs-12 sm-6 md-4 column">
-              <p><a class="btn btn-primary btn-lg btn-block" href="#"
+              <p><a class="btn btn-primary btn-lg btn-block" href="https://go.thisuseful.com/click"
                   rel="nofollow"><strong>36 - 45 »</strong></a></p>
             </div>
             <div class="xs-12 sm-6 md-4 column">
-              <p><a class="btn btn-primary btn-lg btn-block" href="#"
+              <p><a class="btn btn-primary btn-lg btn-block" href="https://go.thisuseful.com/click"
                   rel="nofollow"><strong>46 - 55 »</strong></a></p>
             </div>
             <div class="xs-12 sm-6 md-4 column">
-              <p><a class="btn btn-primary btn-lg btn-block" href="#"
+              <p><a class="btn btn-primary btn-lg btn-block" href="https://go.thisuseful.com/click"
                   rel="nofollow"><strong>56 - 65 »</strong></a></p>
             </div>
             <div class="xs-12 sm-6 md-4 column">
-              <p><a class="btn btn-primary btn-lg btn-block" href="#"
+              <p><a class="btn btn-primary btn-lg btn-block" href="https://go.thisuseful.com/click"
                   rel="nofollow"><strong>66 - up »</strong></a></p>
             </div>
           </div>
           <p class="mb-40">
-            <a class="btn btn-primary btn-lg btn-block" href="#"
+            <a class="btn btn-primary btn-lg btn-block" href="https://go.thisuseful.com/click"
               rel="nofollow"><strong>Get Your New Rate - <span style="text-transform:uppercase;">Free</span>
                 »</strong></a>
           </p>
         </div>
         <div class="lg-4 column mb-40">
-          <a class="autoad" href="#">
+          <a class="autoad" href="https://go.thisuseful.com/click">
             <h3 style="font-weight: 800; color: rgb(0, 0, 0); text-align: center; margin-bottom: 10px;">How Much Can You
               Save?</h3>
             <h4 style="color: #8f0000; text-align: center; margin-top: 5px; margin-bottom: 10px; font-weight: 700;">
@@ -184,14 +184,14 @@
       <p>THIS IS AN ADVERTISEMENT AND NOT AN ACTUAL NEWS ARTICLE, BLOG, OR CONSUMER PROTECTION UPDATE</p>
       <p>*New policy may not apply to all states.</p>
       <p class="copyright">
-        <a href="/privacy-policy" rel="nofollow"><span class="notbold">Privacy Policy</span></a>
-        <a href="/terms" rel="nofollow"><span class="notbold">Terms of Service</span></a>
-        <a href="/contact" rel="nofollow"><span class="notbold">Contact</span></a>
+        <a href="#" rel="nofollow"><span class="notbold">Privacy Policy</span></a>
+        <a href="#" rel="nofollow"><span class="notbold">Terms of Service</span></a>
+        <a href="#" rel="nofollow"><span class="notbold">Contact</span></a>
       </p>
       <p class="copyright">© <span class="current_year"></span> Resourceful Place - All Rights Reserved.</p>
     </div>
   </div>
-
+  <script type="text/javascript" src="https://go.thisuseful.com/track.js?rtkcmpid=66c43b787bcb29804ac37e65"></script>
   <script src="/js/index.js"></script>
 </body>
 
